/made some changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- skills -->
 <div class="skills">
     <div class="tools-grid">
-        <h3 class="tools-text">
+        <h3 id="tools-text">
             Creating Beautiful Responsive Website With HTML and CSS
         </h3>
     <p class="dsc"> With my advanced professional certificatation in design and statistics, i am motivated and teamwork-oriented withnotable experience in comprehensive reporting mechanism for both experienced and inexperienced professionals. </p>
